<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="80dp"
    android:layout_marginBottom="80dp"
    tools:context=".featureUserHealthProfile.BodyTemperature">


    <TextView
        android:id="@+id/no_celsius_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/no_data"/>

    <LinearLayout
        android:background="@drawable/shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">


        <EditText
            android:id="@+id/editTextDateBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="date"
            android:textAlignment="center"
            android:text="@string/dd_mm_yyyy"/>

        <EditText
            android:id="@+id/editTextTimeBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="time"
            android:textAlignment="center"
            android:text="@string/hh_mm"/>


        <ImageView
            android:id="@+id/body_temperature_img"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/no_image" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/body_temperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:text="@string/body_temperature" />


        <EditText
            android:id="@+id/editTextBT"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:hint="--"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:text="@string/celsius"/>



    </LinearLayout>

    <Button
        android:id="@+id/BT_button"
        style="@style/data_button_style"
        android:text="@string/add_data"
        android:layout_gravity="center_horizontal"/>


</androidx.appcompat.widget.LinearLayoutCompat>

