<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".featureAppSettings.Settings">


    <ImageView
        android:id="@+id/setting_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/setting"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings" />

    <RelativeLayout
        android:id="@+id/notification_display"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:elevation="5dp"
        android:orientation="vertical"
        android:background="@drawable/layout_bg"
        android:backgroundTint="@color/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting_img"
        tools:layout_editor_absoluteX="-3dp">

        <TextView
            android:id="@+id/notification_txt"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/notifications"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/notification_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_txt"
            android:layout_alignStart="@id/notification_txt"
            android:layout_below="@id/notification_txt"/>

        <ImageButton
            android:id="@+id/notification_btn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="55dp"
            android:layout_toEndOf="@+id/notification_txt"
            android:contentDescription="@string/notification_details"
            android:background="@null"
            app:srcCompat="@drawable/ic_arrow_forward" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password_display"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:elevation="5dp"
        android:orientation="vertical"
        android:background="@drawable/layout_bg"
        android:backgroundTint="@color/colorPrimaryVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_display">

        <TextView
            android:id="@+id/password_txt"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/password_settings"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/password_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/password_txt"
            android:text="@string/password_txt"
            android:layout_below="@id/password_txt"/>

        <ImageButton
            android:id="@+id/password_btn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="55dp"
            android:layout_toEndOf="@+id/password_txt"
            android:contentDescription="@string/password_settings_details"
            android:background="@null"
            app:srcCompat="@drawable/ic_arrow_forward" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>